--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
 		"morgan": "^1.10.0"
 	},
 	"devDependencies": {
+		"eslint": "^7.10.0",
+		"eslint-config-airbnb-base": "^14.2.0",
+		"eslint-config-prettier": "^6.12.0",
+		"eslint-plugin-import": "^2.22.1",
 		"nodemon": "^2.0.4"
 	}
 }
